<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$PlaceholderFragment">

    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#ffffff"
        app:cardCornerRadius="4dp"
        android:layout_marginTop="56dp"
        app:cardBackgroundColor="#ffffff"
        app:cardElevation="5dp"
        app:cardMaxElevation="10dp"
        app:cardUseCompatPadding="true"
        app:cardPreventCornerOverlap="true">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:animateLayoutChanges="true"
            android:orientation="vertical">

        <TextView
            android:id="@+id/textView_Login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="#ffffff"
            android:text="@string/LoginCampusNet"
            android:textColor="#37474f"
            android:textSize="@dimen/title_std"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:focusable="true"
            android:focusableInTouchMode="true"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_height="match_parent">

            <com.wrapp.floatlabelededittext.FloatLabeledEditText
                android:layout_width="wrap_content"
                android:background="#ffffff"
                android:layout_height="wrap_content"
                android:gravity="center">
                <EditText
                    android:width="@dimen/EditTextView_std"
                    android:id="@+id/et_Account"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="@string/CampusNetAccount"
                    android:maxLength="12"
                    android:singleLine="true"
                    android:textColor="#37474f"
                    android:textSize="@dimen/word_prim"
                    android:textColorHint="@color/hint_foreground_material_light"
                    android:layout_width="wrap_content" />
            </com.wrapp.floatlabelededittext.FloatLabeledEditText>

            <com.wrapp.floatlabelededittext.FloatLabeledEditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center">
                <EditText
                    android:width="@dimen/EditTextView_std"
                    android:id="@+id/et_Password"
                    android:gravity="center"
                    android:hint="@string/CampusNetPassword"
                    android:password="true"
                    android:singleLine="true"
                    android:textColor="#37474f"
                    android:textSize="@dimen/word_prim"
                    android:textColorHint="@color/hint_foreground_material_light"
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content" />
            </com.wrapp.floatlabelededittext.FloatLabeledEditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="center_horizontal"
            android:animateLayoutChanges="true"
            android:orientation="horizontal"
            android:background="#ffffff"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <CheckBox
                android:id="@+id/cb_rememberAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/RememberAccount"
                android:background="#ffffff"
                android:textColor="@color/hint_foreground_material_light" />

            <CheckBox
                android:id="@+id/cb_rememberPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/RememberPassword"
                android:background="#ffffff"
                android:textColor="@color/hint_foreground_material_light" />

        </LinearLayout>

        </LinearLayout>
        </android.support.v7.widget.CardView>

    <com.dd.CircularProgressButton
        android:id="@+id/btCircleProgressBar"
        android:layout_width="196dp"
        android:layout_height="64dp"
        android:textColor="#ffffff"
        android:textSize="@dimen/word_prim"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        app:cpb_textComplete="@string/SuccessfulConnected"
        app:cpb_textError="@string/FailToConnect"
        app:cpb_textIdle="@string/OneKeyConnect"
        android:layout_below="@+id/card_view"
        android:layout_centerHorizontal="true"
        app:cpb_selectorIdle="@drawable/idle_state_selector"
        app:cpb_selectorError="@drawable/error_state_selector"
        app:cpb_selectorComplete="@drawable/complete_state_selector"
        app:cpb_cornerRadius="4dp"
        app:cpb_colorIndicator="@color/colorAccentDark"
        app:cpb_colorIndicatorBackground="@color/colorAccent"
        app:cpb_colorProgress="@color/colorAccentLight"
        app:cpb_iconComplete="@drawable/ic_action_accept"
        app:cpb_iconError="@drawable/ic_action_cancel"
        />

    <ImageView
        android:id="@+id/iv_pic"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_below="@+id/btCircleProgressBar"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>
