<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin_small"
    android:paddingRight="@dimen/activity_horizontal_margin_small"
    android:paddingTop="@dimen/activity_vertical_margin_small"
    android:paddingBottom="@dimen/activity_vertical_margin_small"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_setting"
    tools:context="com.jiahong.ipgw.Setting"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/cv_theme"
        app:cardCornerRadius="4dp"
        app:cardElevation="2dp"
        app:cardMaxElevation="2dp"
        app:cardUseCompatPadding="true"
        app:cardPreventCornerOverlap="true"
        >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/activity_horizontal_margin_small"
            android:layout_marginBottom="@dimen/activity_horizontal_margin_small">
            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="@dimen/ItemHeight_std">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:orientation="vertical"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin_small"
                    android:id="@+id/linearLayout">
                    <TextView
                        android:text="@string/Theme"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/word_std"
                        android:textColor="@color/colorText"/>
                    <TextView
                        android:text="@string/ThemeHint"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/word_sml"
                        android:textColor="@color/colorHint"/>
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/word_std"
                    android:textColor="@color/colorText"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginRight="56dp"
                    android:layout_marginEnd="56dp"></TextView>
            </RelativeLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:cardCornerRadius="4dp"
        app:cardBackgroundColor="#ffffff"
        app:cardElevation="2dp"
        app:cardMaxElevation="2dp"
        app:cardUseCompatPadding="true"
        app:cardPreventCornerOverlap="true">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/activity_horizontal_margin_small"
            android:layout_marginBottom="@dimen/activity_horizontal_margin_small">
            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="@dimen/ItemHeight_std">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:orientation="vertical"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin_small">
                    <TextView
                        android:text="@string/HotConnect"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/word_std"
                        android:textColor="@color/colorText"/>

                    <TextView
                        android:text="@string/HotConnectHint"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/word_sml"
                        android:textColor="@color/colorHint"/>
                </LinearLayout>
                <Switch
                    android:id="@+id/sw_autoConnect"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin_small"/>
            </RelativeLayout>
            <View
                android:id="@+id/divider_0"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginRight="@dimen/activity_horizontal_margin_small"
                android:layout_marginLeft="@dimen/activity_horizontal_margin_small"></View>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="@dimen/ItemHeight_std"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:orientation="vertical"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin_small">
                    <TextView
                        android:id="@+id/tv_overtime"
                        android:text="@string/Timeout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/word_std"
                        android:textColor="@color/colorText"/>

                    <TextView
                        android:text="@string/TimeoutHint"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/word_sml"
                        android:textColor="@color/colorHint"/>
                </LinearLayout>

                <SeekBar
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/sb_overtime"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin_small"
                    android:layout_marginRight="@dimen/activity_horizontal_margin_small"
                    android:max="6000" />
            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>
